audit java-developer skill against google java style guide